Weather app code works

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="./js/script.js"></script>
-    <title>Whats The Weather!</title>
+    <title>AJAX Weather APP!</title>
 </head>
 <body>
     <Main>
     <h1>Whats the WEATHER!</h1>
-    <p id="title"></p>
+    <p>Weather For:</p>
+    <p id="name"></p>
+    <p>Temperature: </p>
     <p id="temp"></p>
-    <p id="index"></p>
+    <p>Feels Like: </p>
+    <p id="feelslike"></p>
+    <P>Weather: </P>
     <p id="description"></p>
 </Main>
 <form>
